syntax = "proto3";

package zio.insight.api.protocol;

enum InsightPlugin { 
  ZIO_INSIGHT = 0;
  ZIO_INSIGHT_METRICS = 1;
  ZIO_INSIGHT_FIBER = 2;
  ZIO_INSIGHT_SERVICES = 3;
  ZIO_INSIGHT_PROFILING = 4;
}

message InsightMessage { 
  string app_id = 1;
  InsightPlugin plugin = 2;
  string msgTag = 3;
  int64 timestamp = 4;
  bytes payload = 5;
}